// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Level component Should concat classname in props with Bulma classname 1`] = `
<div
  className="level other-class this-is-a-test"
  style={Object {}}
>
  <p>
    Default
  </p>
</div>
`;

exports[`Level component Should exist 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "Item": Object {
    "$$typeof": Symbol(react.forward_ref),
    "defaultProps": Object {
      "backgroundColor": null,
      "children": null,
      "className": "",
      "clearfix": false,
      "clipped": false,
      "hidden": false,
      "invisible": false,
      "italic": false,
      "marginless": false,
      "overlay": false,
      "paddingless": false,
      "pull": null,
      "radiusless": false,
      "renderAs": "div",
      "responsive": undefined,
      "shadowless": false,
      "style": Object {},
      "textAlignment": null,
      "textColor": null,
      "textSize": null,
      "textTransform": null,
      "textWeight": null,
      "unselectable": false,
    },
    "propTypes": Object {
      "backgroundColor": [Function],
      "children": [Function],
      "className": [Function],
      "clearfix": [Function],
      "clipped": [Function],
      "hidden": [Function],
      "invisible": [Function],
      "italic": [Function],
      "marginless": [Function],
      "overlay": [Function],
      "paddingless": [Function],
      "pull": [Function],
      "radiusless": [Function],
      "renderAs": [Function],
      "responsive": [Function],
      "shadowless": [Function],
      "style": [Function],
      "textAlignment": [Function],
      "textColor": [Function],
      "textSize": [Function],
      "textTransform": [Function],
      "textWeight": [Function],
      "unselectable": [Function],
    },
    "render": [Function],
  },
  "Side": Object {
    "$$typeof": Symbol(react.forward_ref),
    "defaultProps": Object {
      "align": "left",
      "backgroundColor": null,
      "children": null,
      "className": "",
      "clearfix": false,
      "clipped": false,
      "hidden": false,
      "invisible": false,
      "italic": false,
      "marginless": false,
      "overlay": false,
      "paddingless": false,
      "pull": null,
      "radiusless": false,
      "renderAs": "div",
      "responsive": undefined,
      "shadowless": false,
      "style": Object {},
      "textAlignment": null,
      "textColor": null,
      "textSize": null,
      "textTransform": null,
      "textWeight": null,
      "unselectable": false,
    },
    "propTypes": Object {
      "align": [Function],
      "backgroundColor": [Function],
      "children": [Function],
      "className": [Function],
      "clearfix": [Function],
      "clipped": [Function],
      "hidden": [Function],
      "invisible": [Function],
      "italic": [Function],
      "marginless": [Function],
      "overlay": [Function],
      "paddingless": [Function],
      "pull": [Function],
      "radiusless": [Function],
      "renderAs": [Function],
      "responsive": [Function],
      "shadowless": [Function],
      "style": [Function],
      "textAlignment": [Function],
      "textColor": [Function],
      "textSize": [Function],
      "textTransform": [Function],
      "textWeight": [Function],
      "unselectable": [Function],
    },
    "render": [Function],
  },
  "defaultProps": Object {
    "backgroundColor": null,
    "breakpoint": null,
    "children": null,
    "className": "",
    "clearfix": false,
    "clipped": false,
    "hidden": false,
    "invisible": false,
    "italic": false,
    "marginless": false,
    "overlay": false,
    "paddingless": false,
    "pull": null,
    "radiusless": false,
    "renderAs": "div",
    "responsive": undefined,
    "shadowless": false,
    "style": Object {},
    "textAlignment": null,
    "textColor": null,
    "textSize": null,
    "textTransform": null,
    "textWeight": null,
    "unselectable": false,
  },
  "propTypes": Object {
    "backgroundColor": [Function],
    "breakpoint": [Function],
    "children": [Function],
    "className": [Function],
    "clearfix": [Function],
    "clipped": [Function],
    "hidden": [Function],
    "invisible": [Function],
    "italic": [Function],
    "marginless": [Function],
    "overlay": [Function],
    "paddingless": [Function],
    "pull": [Function],
    "radiusless": [Function],
    "renderAs": [Function],
    "responsive": [Function],
    "shadowless": [Function],
    "style": [Function],
    "textAlignment": [Function],
    "textColor": [Function],
    "textSize": [Function],
    "textTransform": [Function],
    "textWeight": [Function],
    "unselectable": [Function],
  },
  "render": [Function],
}
`;

exports[`Level component Should expose Level Side and Item 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "defaultProps": Object {
    "align": "left",
    "backgroundColor": null,
    "children": null,
    "className": "",
    "clearfix": false,
    "clipped": false,
    "hidden": false,
    "invisible": false,
    "italic": false,
    "marginless": false,
    "overlay": false,
    "paddingless": false,
    "pull": null,
    "radiusless": false,
    "renderAs": "div",
    "responsive": undefined,
    "shadowless": false,
    "style": Object {},
    "textAlignment": null,
    "textColor": null,
    "textSize": null,
    "textTransform": null,
    "textWeight": null,
    "unselectable": false,
  },
  "propTypes": Object {
    "align": [Function],
    "backgroundColor": [Function],
    "children": [Function],
    "className": [Function],
    "clearfix": [Function],
    "clipped": [Function],
    "hidden": [Function],
    "invisible": [Function],
    "italic": [Function],
    "marginless": [Function],
    "overlay": [Function],
    "paddingless": [Function],
    "pull": [Function],
    "radiusless": [Function],
    "renderAs": [Function],
    "responsive": [Function],
    "shadowless": [Function],
    "style": [Function],
    "textAlignment": [Function],
    "textColor": [Function],
    "textSize": [Function],
    "textTransform": [Function],
    "textWeight": [Function],
    "unselectable": [Function],
  },
  "render": [Function],
}
`;

exports[`Level component Should expose Level Side and Item 2`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "defaultProps": Object {
    "backgroundColor": null,
    "children": null,
    "className": "",
    "clearfix": false,
    "clipped": false,
    "hidden": false,
    "invisible": false,
    "italic": false,
    "marginless": false,
    "overlay": false,
    "paddingless": false,
    "pull": null,
    "radiusless": false,
    "renderAs": "div",
    "responsive": undefined,
    "shadowless": false,
    "style": Object {},
    "textAlignment": null,
    "textColor": null,
    "textSize": null,
    "textTransform": null,
    "textWeight": null,
    "unselectable": false,
  },
  "propTypes": Object {
    "backgroundColor": [Function],
    "children": [Function],
    "className": [Function],
    "clearfix": [Function],
    "clipped": [Function],
    "hidden": [Function],
    "invisible": [Function],
    "italic": [Function],
    "marginless": [Function],
    "overlay": [Function],
    "paddingless": [Function],
    "pull": [Function],
    "radiusless": [Function],
    "renderAs": [Function],
    "responsive": [Function],
    "shadowless": [Function],
    "style": [Function],
    "textAlignment": [Function],
    "textColor": [Function],
    "textSize": [Function],
    "textTransform": [Function],
    "textWeight": [Function],
    "unselectable": [Function],
  },
  "render": [Function],
}
`;

exports[`Level component Should have level classname 1`] = `
<div
  className="level"
  style={Object {}}
>
  <div
    className="level-item"
    style={Object {}}
  >
    Item 1
  </div>
  <div
    className="level-item"
    style={Object {}}
  >
    Item 2
  </div>
  <div
    className="level-item"
    style={Object {}}
  >
    Item 3
  </div>
</div>
`;

exports[`Level component Should render Levels with right and left side 1`] = `
<div
  className="level"
  style={Object {}}
>
  <div
    className="level-left"
    style={Object {}}
  >
    <div
      className="level-item"
      style={Object {}}
    >
      Item 1
    </div>
    <div
      className="level-item"
      style={Object {}}
    >
      Item 2
    </div>
  </div>
  <div
    className="level-right"
    style={Object {}}
  >
    <div
      className="level-item"
      style={Object {}}
    >
      Item 3
    </div>
  </div>
</div>
`;

exports[`Level component Should use inline styles 1`] = `
<div
  className="level"
  style={
    Object {
      "height": 250,
    }
  }
>
  <p>
    Default
  </p>
</div>
`;
